--- a/components/nav.html
+++ b/components/nav.html
@@ -11,3 +11,24 @@
     Request Invite
   </button>
 </nav>
+
+<nav class="nav collapsible collapsible--expanded">
+  <img src="/images/logo.svg" alt="Easybank Logo" />
+  <img
+    class="collapsible__hamburger-icon"
+    src="/images/icon-hamburger.svg"
+    alt="Navigation Toggler"
+  />
+  <div class="collapsible__content">
+    <ul class="list nav__list-container">
+      <li class="nav__item"><a href="#">Home</a></li>
+      <li class="nav__item"><a href="#">About</a></li>
+      <li class="nav__item"><a href="#">Contact</a></li>
+      <li class="nav__item"><a href="#">Blog</a></li>
+      <li class="nav__item"><a href="#">Careers</a></li>
+    </ul>
+    <button type="button" class="btn btn--primary-gradient btn--nav">
+      Request Invite
+    </button>
+  </div>
+</nav>
