--- a/css/styles.css
+++ b/css/styles.css
@@ -64,6 +64,19 @@ address {
   font-size: 1.3rem;
   margin: 0.5rem 0;
 }
+
+.footer__item,
+.paragraph__footer {
+  color: #fff;
+  font-size: 1.5rem;
+  font-weight: 400;
+}
+
+.paragraph__footer {
+  opacity: 0.5;
+  margin-bottom: 4rem;
+}
+
 @media screen and (min-width: 768px) {
   h2 {
     font-size: 4rem;
@@ -130,6 +143,10 @@ a:hover {
 .icon {
   width: 72px;
   height: 72px;
+}
+
+.icon--white {
+  fill: #fff;
 }
 
 /*.icon--primary {
@@ -342,4 +359,19 @@ a:hover {
 .article__block {
   background: #fafafa;
   padding-bottom: 7rem;
+}
+
+/* Footer */
+.footer {
+  background: var(--color-headings);
+  padding-top: 1rem;
+}
+
+.footer__list {
+  text-align: center;
+  margin-bottom: 0;
+}
+
+.footer__item {
+  margin: 1rem;
 }
