--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,10 @@ h4 {
   font-weight: 400;
 }
 
+h1 {
+  font-size: 4rem;
+  font-weight: 300;
+}
 h2 {
   font-size: 3.2rem;
 }
@@ -95,6 +99,11 @@ address {
   }
 }
 
+@media screen and (min-width: 1124px) {
+  h1 {
+    font-size: 5.6rem;
+  }
+}
 /* Links */
 a {
   text-decoration: none;
@@ -267,6 +276,73 @@ a:hover {
   }
 }
 
+/* Hero */
+.hero__image {
+  background: #f2f2f2;
+  height: 80rem;
+  background-image: url("/images/bg-intro-mobile.svg");
+  background-repeat: no-repeat;
+  background-position: top -60px right;
+}
+
+.image-mockup-container {
+  position: absolute;
+  height: 39rem;
+  width: 35rem;
+  border: solid 1px gold;
+  right: 12px;
+}
+
+.image-mockup {
+  object-position: center -125px;
+  width: 100%;
+}
+
+.hero__content {
+  padding-top: 30rem;
+  width: 32.7rem;
+  text-align: center;
+  margin: auto;
+}
+
+@media screen and (max-width: 330px) {
+  .hero__content {
+    width: 25rem;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero__content {
+    align-content: center;
+    margin: 20px;
+    padding-top: 0;
+  }
+
+  .hero__image {
+    height: 40rem;
+  }
+}
+
+@media screen and (min-width: 1124px) {
+  .hero__image {
+    height: 65rem;
+    background-image: url("/images/bg-intro-desktop.svg");
+    background-repeat: no-repeat;
+    background-position: top -250px right -425px;
+  }
+
+  .image-mockup-container {
+    height: 80rem;
+    width: auto;
+    margin-right: -125px;
+  }
+
+  .hero__content {
+    width: 44.7rem;
+    text-align: left;
+}
+
+.hero__content
 /* Cards */
 .card__feature {
   padding-bottom: 5rem;
