Hero component built.

--- a/css/styles.css
+++ b/css/styles.css
@@ -340,9 +340,9 @@ a:hover {
   .hero__content {
     width: 44.7rem;
     text-align: left;
+  }
 }
 
-.hero__content
 /* Cards */
 .card__feature {
   padding-bottom: 5rem;
