Updated nav, created modal.

--- a/components/hero-sections.html
+++ b/components/hero-sections.html
@@ -1,18 +1,43 @@
-<section class="hero__image">
-    <div class="grid grid--1x2 grid--1x3"></div>
-        <div class="image-mockup-container">
-          <img class="image-mockup" src="/images/image-mockups.png" alt="" />
-        </div>
-      <div class="hero__content">
-        <h1>Next generation digital banking</h1>
-        <p class="paragraph__header">
-          Take your financial life online. Your Easybank account will be a
-          one-stop-shop for spending, saving, budgeting, investing, and much
-          more.
-        </p>
-        <button type="button" class="btn btn--primary-gradient">
-          Request Invite
-        </button>
-      </div>
+<header class="hero">
+  <nav class="nav collapsible collapsible--expanded">
+    <img src="/images/logo.svg" alt="Easybank Logo" />
+    <img
+      class="collapsible__hamburger-icon"
+      src="/images/icon-hamburger.svg"
+      alt="Navigation Toggler"
+    />
+    <div class="collapsible__content">
+      <ul class="list nav__list-container">
+        <li class="nav__item"><a href="#">Home</a></li>
+        <li class="nav__item"><a href="#">About</a></li>
+        <li class="nav__item"><a href="#">Contact</a></li>
+        <li class="nav__item"><a href="#">Blog</a></li>
+        <li class="nav__item"><a href="#">Careers</a></li>
+      </ul>
+      <button type="button" class="btn btn--primary-gradient btn--nav">
+        Request Invite
+      </button>
     </div>
-  </section>
+  </nav>
+  <div class="hero__content-container">
+    <section class="hero__image">
+      <div class="grid grid--1x2 grid--1x4"></div>
+          <div class="image-mockup-container">
+            <img class="image-mockup" src="/images/image-mockups.png" alt="" />
+          </div>
+        <div class="hero__content">
+          <h1>Next generation digital banking</h1>
+          <p class="paragraph__header">
+            Take your financial life online. Your Easybank account will be a
+            one-stop-shop for spending, saving, budgeting, investing, and much
+            more.
+          </p>
+          <button type="button" class="btn btn--primary-gradient">
+            Request Invite
+          </button>
+        </div>
+      </div>
+      
+    </section>
+  </div>
+</header>
