--- a/css/styles.css
+++ b/css/styles.css
@@ -178,30 +178,53 @@ a:hover {
   padding-left: 0;
 }
 
-/* Collapsibles */
-.collapsible__content {
-  max-height: 0;
-  overflow: hidden;
-  opacity: 0;
-  transition: all 0.5s;
-}
-.collapsible--expanded .collapsible__content {
-  max-height: 100vh;
-  opacity: 1;
-}
-
-.collapsible__hamburger-icon {
-  cursor: pointer;
+/* Modal for Navigation Menu */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 2;
+  margin-top: 4rem;
+  left: 0;
   height: 100%;
-  transition: transform 0.5s ease-in;
+  width: 100%;
+  background: rgba(149, 151, 165, 0.75);
 }
 
-.collapsible__hamburger-icon:hover {
-  transform: scale(1.5);
+.modal__content {
+  background: #fff;
+  margin: 2rem auto;
+  text-align: center;
+  width: 32.7rem;
+  height: 26.5rem;
+  padding-top: 0.5rem;
+  border-radius: 5px;
 }
 
+.modal__content,
+#openModalImage {
+  animation-name: modal-open;
+  animation-duration: 1s;
+}
+#openModalImage {
+  display: inline-flex;
+  align-self: flex-end;
+}
+
+#closeModalImage {
+  display: none;
+  align-self: flex-end;
+}
+
+@keyframes modal-open {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 /* Navigation Bar */
-.nav {
+/*.nav {
   background: #fff;
   display: flex;
   flex-wrap: wrap;
@@ -212,6 +235,18 @@ a:hover {
   padding-right: 20px;
   padding-top: 20px;
   max-width: 1070px;
+}*/
+.nav {
+  background: #fff;
+  display: flex;
+  justify-content: space-between;
+  margin: auto;
+  position: fixed;
+  top: 0;
+  height: 6rem;
+  padding: 20px;
+  width: 100%;
+  max-width: 700px;
 }
 
 .list-container--outer {
@@ -279,6 +314,7 @@ a:hover {
 /* Hero */
 .hero__content-container {
   background: var(--background-color-primary);
+  margin-top: 6rem;
 }
 
 .hero__image {
