--- a/components/article-block.html
+++ b/components/article-block.html
@@ -2,8 +2,8 @@
   <header class="article__header">
     <h2>Latest Articles</h2>
   </header>
-  <div class="grid grid--1x2 grid--1x3">
-    <article class="card__article card__article--skin">
+  <div class="grid grid--1x2 grid--1x4">
+    <article class="card__article">
       <picture>
         <source type="image/webp" srcset="/images/image-currency.webp" />
         <source type="image/jpg" srcset="/images/image-currency.jpg" />
@@ -22,7 +22,7 @@
         </p>
       </div>
     </article>
-    <article class="card__article card__article--skin">
+    <article class="card__article">
       <picture>
         <source type="image/webp" srcset="/images/image-restaurant.webp" />
         <source type="image/jpg" srcset="/images/image-restaurant.jpg" />
@@ -41,7 +41,7 @@
         </p>
       </div>
     </article>
-    <article class="card__article card__article--skin">
+    <article class="card__article">
       <picture>
         <source type="image/webp" srcset="/images/image-plane.webp" />
         <source type="image/jpg" srcset="/images/image-plane.jpg" />
@@ -60,7 +60,7 @@
         </p>
       </div>
     </article>
-    <article class="card__article card__article--skin">
+    <article class="card__article">
       <picture>
         <source type="image/webp" srcset="/images/image-confetti.webp" />
         <source type="image/jpg" srcset="/images/image-confetti.jpg" />
