--- a/components/feature-block.html
+++ b/components/feature-block.html
@@ -6,12 +6,10 @@
       hub. Control your finances like never before.
     </p>
   </header>
-  <div class="grid grid--1x2 grid--1x3">
+  <div class="grid grid--1x2 grid--1x4">
     <div class="card__feature">
       <span class="icon-container">
-        <svg class="icon icon--primary">
-          <use href="/images/icon-online.svg"></use>
-        </svg>
+        <img src="/images/icon-online.svg" alt="" />
       </span>
       <h3>Online Banking</h3>
       <p class="paragraph__feature">
@@ -21,9 +19,7 @@
     </div>
     <div class="card__feature">
       <span class="icon-container">
-        <svg class="icon icon--primary">
-          <use href="/images/icon-online.svg"></use>
-        </svg>
+        <img src="/images/icon-budgeting.svg" alt="" />
       </span>
       <h3>Simple Budgeting</h3>
       <p class="paragraph__feature">
@@ -33,9 +29,7 @@
     </div>
     <div class="card__feature">
       <span class="icon-container">
-        <svg class="icon icon--primary">
-          <use href="/images/icon-online.svg"></use>
-        </svg>
+        <img src="/images/icon-onboarding.svg" alt="" />
       </span>
       <h3>Fast Onboarding</h3>
       <p class="paragraph__feature">
@@ -45,9 +39,7 @@
     </div>
     <div class="card__feature">
       <span class="icon-container">
-        <svg class="icon icon--primary">
-          <use href="/images/icon-online.svg"></use>
-        </svg>
+        <img src="/images/icon-api.svg" alt="" />
       </span>
       <h3>Open API</h3>
       <p class="paragraph__feature">
